5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1575_1332.log
== TEST (2019-03-12 11:49:55) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:01) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.139469
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:58) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:27) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.183009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:47) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:50) 
-- CODE:
aresta =5
area =3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.142121
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:23) 
-- CODE:
aresta =5
area =3/2*(3*(aresta**2)**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:38) 
-- CODE:
aresta =5
area =3/2*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:53:40) 
-- CODE:
aresta =5
area =3/2*(3*(aresta**2))**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.168756
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:44) 
-- CODE:
aresta =5
area =3/2*(3**0.5)
*(aresta**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    *(aresta**2)
    ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:49) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:52) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.120365
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
